tests/neg/i1647.scala
class ann {
  @ann({ def baz })  // error: missing return type
  def foo(): Unit
}
